# Xprime

./: .gitattributes  .gitignore  LICENSE  README.md  UPDATE.md  hpppl.yml  hppplplus.yml  ppl.yml
Apps/Fonts/: ARCADE.hpppl  BBC.hpppl  CGA.hpppl  EGA.hpppl  Fonts.prgm+  Fonts.xprimeproj  HD44780.hpppl  VGA.hpppl  info.note  main.hppplplus  main.ppl+  my.note
Apps/HP/: ColorSpace.hpppl  GROB.hpppl  HP.hpppl  HP.hpprgm  HP.prgm  HP.xcodeproj  HP.xprimeproj  Sys10.h  Sys8.h  TEXT.hpppl  info.note  main.hppplplus
Design/: About Opux.psd  Check.psd  Folder Icon.psd  Gradients.grd  Grid Pattern.psd  Patterns.pat
Design/Icon Masters/: AppIcon.sh  Document Icon.psd  File Type Icons.psd  Folder Icon.psd  HP Application Icon.psd
Design/Photosho Resources/: macOS 26 Icon.atn
Design/Templates/: Document Icon.ai  Folder Icon.ai  Large Grid Pattern.psd  replacement.ai
Examples/Chess/: Chess.hpprgm  Chess.xprimeproj
Examples/Colors/: Colors.hpprgm  Colors.xcodeproj  Colors.xprimeproj  main.hppplplus  main.ppl+  main.prgm+
Examples/Font/: Font.hpprgm  Font.xprimeproj  main.hppplplus
Examples/Fonts/: Fonts.hpprgm  Fonts.prgm  Fonts.prgm+  Fonts.xprimeproj
Examples/Graphics/: Common.prgm+  Graphics.hpprgm  Graphics.prgm  Graphics.prgm+  Graphics.xprimeproj  main.hppplplus  main.ppl+  main.prgm+  spectrum.prgm
Examples/Mad/: Mad.hpprgm  Mad.prgm+  Mad.xcodeproj  Mad.xprimeproj  data.hpppl  main.hppplplus  main.ppl+
Examples/Note/: Note.xprimeproj  readme.hpnote
Examples/Shuttle/: Shuttle.xprimeproj  data.hpppl  main.hppplplus  main.ppl+
Examples/Untitled/: Untitled.hpprgm  Untitled.xprimeproj
Libraries/: HP.prgm  Libraries.xprimeproj
Templates/: AppIcon.sh  Check.psd  Component Icon.psd  Folder Icon.psd  Grid Pattern.psd  HP Logo.psd  Icon.ai  Icon.psd  Project.psd  Rainbow Flower.ai  icns
Templates/Project Icon/: Project.icns  icns  iconset
Themes/: GitHub (Light).xpcolortheme  Modern Retro.xpcolortheme
Windows/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  Xprime.Windows.sln  build-windows.ps1
Windows/toolchain/: CMakeLists.txt  README.md
Xcode/: Click.caf  xprime-app-version.json
Xprime/: AppDelegate.swift  AppProcessUtilities.swift  AppSettings.swift  CodeEditorTextView.swift  CommandLineTool.swift  HP.swift  MainViewController.swift  QuickHelpViewController.swift  SettingsViewController.swift  XprimeProject.swift
_installer/: distribution.dist  productbuild.sh  update_pkg_sizes.sh
assets/: Application.psd  ApplicationIcon.ai  GenericDocumentIcon.ai  GenericDocumentIcon.psd  HP Application Icon.psd  Icon.psd  Program.psd  ProgramIcon.ai  Project.psd  Xprime Project.psd  format.py  icns  minetypes.psd
installer/: distribution.dist  layout.scpt  package_xprime.sh
(+1880 files in other folders)
